@@ -16,6 +16,7 @@ Release 0.20.1 - Unreleased
    HBASE-1687  bin/hbase script doesn't allow for different memory settings for
                each daemon type
    HBASE-1823  Ability for Scanners to bypass the block cache
+   HBASE-1827  Add disabling block cache scanner flag to the shell
 
 Release 0.20.0 - Tue Sep  8 12:48:41 PDT 2009
 
